# darkroom

./: .env.example  .gitignore  CHANGES.md  Cargo.toml  README.md  ROADMAP.md  RUST_MIGRATION_PLAN.md
.github/workflows/: ci-fork.yml  ci.yml  docker.yml  rust.yml
crates/darkroom/: Cargo.toml
crates/darkroom-core/: Cargo.toml
crates/darkroom-core/src/: color.rs  error.rs  lib.rs  math.rs  params.rs  raw.rs  roi.rs
crates/darkroom-core/src/iop/: agx.rs  atrous.rs  basecurve.rs  basicadj.rs  bloom.rs  cacorrectrgb.rs  censorize.rs  channelmixer.rs  channelmixerrgb.rs  clahe.rs  colisa.rs  colorbalance.rs  colorchecker.rs  colorcontrast.rs  colorcorrection.rs  colorequal.rs  colorin.rs  colorize.rs  colormapping.rs  colorout.rs  colortransfer.rs  colorzones.rs  defringe.rs  diffuse.rs  dither.rs  exposure.rs  filmic.rs  globaltonemap.rs  graduatednd.rs  grain.rs  hazeremoval.rs  highlights.rs  highpass.rs  hotpixels.rs  invert.rs  levels.rs  lowlight.rs  lowpass.rs  lut3d.rs  mod.rs  (+23 more)
crates/darkroom-db/: Cargo.toml
crates/darkroom-sys/: Cargo.toml  build.rs
crates/darkroom-ui/: Cargo.toml
crates/darkroom-ui/src/: lib.rs
crates/darkroom/src/: main.rs
data/: CMakeLists.txt  org.darktable.darktable.appdata.xml.in
data/print_layouts/: contact-sheet-4x5.json  grid-2x3.json  photo-book-page.json  single-fullpage.json  triptych.json
docker/: Dockerfile  Dockerfile.rust-dev  cont-init-darkroom.sh  docker-compose.yml  kasmvnc-autostart.sh
packaging/windows/: darktable.iss.in
src/: CMakeLists.txt  main.c
src/chart/: main.c
src/common/: darktable.c  database.c  file_location.c  image.h  image_cache.c  print_layouts.c  print_layouts.h  ratings.c  smart_previews.c  smart_previews.h  virtual_copies.c  virtual_copies.h
src/gui/: about.c  accelerators.c  gtk.c  gtkentry.c  preferences.c  splash.c  welcome.c  workspace.c
src/imageio/: imageio.c  imageio_tiff.c
src/iop/: agx.c  atrous.c  basecurve.c  basicadj.c  bloom.c  cacorrectrgb.c  censorize.c  channelmixer.c  channelmixerrgb.c  clahe.c  colisa.c  colorbalance.c  colorchecker.c  colorcontrast.c  colorcorrection.c  colorequal.c  colorin.c  colorize.c  colormapping.c  colorout.c  colortransfer.c  colorzones.c  defringe.c  diffuse.c  dither.c  exposure.c  filmic.c  globaltonemap.c  graduatednd.c  grain.c  hazeremoval.c  highlights.c  highpass.c  hotpixels.c  invert.c  levels.c  lowlight.c  lowpass.c  lut3d.c  monochrome.c  (+22 more)
src/libs/: collect.c  copy_history.c  image.c  import.c  print_settings.c
src/rust_ffi/: darkroom_core.h
(+9 files in other folders)
