[package]
name = "darkroom-ui"
version = "0.1.0"
edition = "2021"
description = "GTK4 + libadwaita UI shell — incrementally replaces src/views, src/libs, src/gui"

[dependencies]
darkroom-core = { workspace = true }
darkroom-db   = { workspace = true }
anyhow        = { workspace = true }
tracing       = { workspace = true }
gtk4          = { version = "0.9", features = ["v4_12"] }
adw           = { package = "libadwaita", version = "0.7", features = ["v1_5"] }
glib          = "0.20"
