[package]
name = "darkroom"
version = "0.1.0"
edition = "2021"
description = "Darkroom photo editor — Rust binary (Phase 4 target)"

[[bin]]
name = "darkroom-rs"
path = "src/main.rs"

[dependencies]
darkroom-core = { workspace = true }
darkroom-db   = { workspace = true }
darkroom-ui   = { workspace = true }
anyhow        = { workspace = true }
